--- a/package.json
+++ b/package.json
@@ -67,8 +67,8 @@
   "exports": {
     "./package.json": "./package.json",
     ".": {
-      "import": "./dist/index.js",
-      "default": "./dist/index.cjs"
+      "import": "./dist/esm/index.js",
+      "default": "./dist/cjs/index.cjs"
     }
   },
   "directories": {
