24-load-city-data-from-ts-files-synchronously (#25)
* start

* update script

* fix: ci

* format fix

* format fix

* fix: build

--- a/package.json
+++ b/package.json
@@ -67,8 +67,7 @@
   "exports": {
     "./package.json": "./package.json",
     ".": {
-      "import": "./dist/index.js",
-      "default": "./dist/index.cjs"
+      "import": "./dist/index.js"
     }
   },
   "directories": {
